cmake_minimum_required(VERSION 3.10.0)


project(2)

add_executable(Cmake_figura main.cpp Class.cpp Class.hpp equilateralTriangle.cpp equilateralTriangle.hpp isoscelesTriangle.cpp isoscelesTriangle.hpp Parallelogram.cpp Parallelogram.hpp printFigure.cpp printFigure.hpp Quadrilateral.cpp Quadrilateral.hpp Rectangle.cpp Rectangle.hpp Rhomb.cpp Rhomb.hpp rightTriangle.cpp rightTriangle.hpp Square.cpp Square.hpp Triangle.cpp Triangle.hpp)
